refactored class names

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -94,8 +94,8 @@
    "outputs": [],
    "source": [
     "# Save references to each table\n",
-    "table_station = Base.classes.station\n",
-    "table_measurement = Base.classes.measurement"
+    "station = Base.classes.station\n",
+    "measurement = Base.classes.measurement"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "source": [
     "# Find the most recent date in the data set.\n",
     "\n",
-    "recent_date = session.query(func.max(table_measurement.date)).first()\n",
+    "recent_date = session.query(func.max(measurement.date)).first()\n",
     "print(recent_date)\n",
     "\n",
     "print(recent_date[0])"
@@ -164,7 +164,7 @@
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
-    "recent_date = session.query(func.max(table_measurement.date)).first()\n",
+    "recent_date = session.query(func.max(measurement.date)).first()\n",
     "\n",
     "# Calculate the date one year from the last date in data set.\n",
     "last_year_date = recent_date[0]\n",
@@ -174,8 +174,8 @@
     "print(last_year_date)\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "query_recent_year_date_and_precipitation = session.query(table_measurement.date, table_measurement.prcp).\\\n",
-    "    filter(table_measurement.date > last_year_date)\n",
+    "query_recent_year_date_and_precipitation = session.query(measurement.date, measurement.prcp).\\\n",
+    "    filter(measurement.date > last_year_date)\n",
     "\n",
     "\n",
     "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
@@ -229,16 +229,16 @@
     "#to look at the data\n",
     "\n",
     "#looks like repeated values due to separate stations, inconsistent due to NaN's\n",
-    "# session.query(table_measurement.date, func.count(table_measurement.date)).group_by(table_measurement.date).all()\n",
+    "# session.query(measurement.date, func.count(measurement.date)).group_by(measurement.date).all()\n",
     "\n",
     "\n",
     "#perhaps it would be worth it to try graphing where we take the mean and graph that\n",
     "\n",
     "alt_data = (\n",
     "    session\n",
-    "    .query(table_measurement.date, func.avg(table_measurement.prcp.label('avg_prcp')))\n",
-    "    .filter(table_measurement.date > last_year_date)\n",
-    "    .group_by(table_measurement.date)\n",
+    "    .query(measurement.date, func.avg(measurement.prcp.label('avg_prcp')))\n",
+    "    .filter(measurement.date > last_year_date)\n",
+    "    .group_by(measurement.date)\n",
     "    .all()\n",
     ")\n",
     "\n",
