--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -356,30 +356,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to calculate the total number of stations in the dataset\n"
+    "# Design a query to calculate the total number of stations in the dataset\n",
+    "\n",
+    "total_stations = (\n",
+    "    session\n",
+    "    .query(func.count(station.station))\n",
+    "    .scalar()\n",
+    ")\n",
+    "\n",
+    "total_stations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to find the most active stations (i.e. which stations have the most rows?)\n",
-    "# List the stations and their counts in descending order.\n"
+    "# List the stations and their counts in descending order.\n",
+    "\n",
+    "station_counts = (\n",
+    "    session\n",
+    "    .query(measurement.station, func.count(measurement.station).label('count'))\n",
+    "    .group_by(measurement.station)\n",
+    "    .order_by(sqlalchemy.desc('count'))\n",
+    "    .all()\n",
+    ")\n",
+    "\n",
+    "station_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(54.0, 85.0, 71.66378066378067)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "\n",
+    "desired_station_id = station_counts[0][0]\n",
+    "\n",
+    "desired_station_weather_stats = (\n",
+    "    session\n",
+    "    .query(func.min(measurement.tobs), func.max(measurement.tobs),  func.avg(measurement.tobs))\n",
+    "    .filter(measurement.station == desired_station_id)\n",
+    "    .group_by(measurement.station)\n",
+    "    .all()\n",
+    ")\n",
+    "\n",
+    "desired_station_weather_stats"
    ]
   },
   {
@@ -389,7 +460,8 @@
    "outputs": [],
    "source": [
     "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "\n"
    ]
   },
   {
