Finished flask app, finished notebook, only readme to do

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['station', 'measurement']\n"
+      "['measurement', 'station']\n"
      ]
     }
    ],
@@ -442,6 +442,7 @@
     "\n",
     "desired_station_id = station_counts[0][0]\n",
     "\n",
+    "#not sure group by is neceassary\n",
     "desired_station_weather_stats = (\n",
     "    session\n",
     "    .query(func.min(measurement.tobs), func.max(measurement.tobs),  func.avg(measurement.tobs))\n",
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
