README changes and a comment change in notebook

--- a/climate.ipynb
+++ b/climate.ipynb
@@ -232,7 +232,7 @@
     "# session.query(measurement.date, func.count(measurement.date)).group_by(measurement.date).all()\n",
     "\n",
     "\n",
-    "#perhaps it would be worth it to try graphing where we take the mean and graph that\n",
+    "#perhaps it would be worth it to try graphing where we take the mean\n",
     "\n",
     "alt_data = (\n",
     "    session\n",
